--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "backpack/generators",
+    "name": "cloudy4next/generators",
     "description": "Generate files for laravel projects",
     "keywords": [
         "generators",
