--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url":  "git@github.com:cloudy4next/CRUD.git",
+            "url":  "git@github.com:cloudy4next/crud.git"
         }
     ],
     "require-dev": {
